# conan-boost-mingw-recreate

./: README.md
ConanMinGW/: README.md  conanfile.txt
Recreate/: CMakeLists.txt  conanfile.py
Recreate/src/: acme.cpp  acme.h  test_acme.cpp
